# ==================================================
# vars

config("tank_config") {
  include_dirs = [ "include" ]
}

static_library("client") {
  sources = [ "client.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank") {
  sources = [ "service.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank-cli") {
  sources = [ "cli.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  deps = [
    ":client"
  ]
}

