# ==================================================
# vars

config("tank_config") {
  include_dirs = [ "." ]
}

static_library("client") {
  sources = [ "client.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  public_configs = [ ":tank_config" ]
  
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank") {
  sources = [ "service.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank-cli") {
  sources = [ "cli.cpp" ]
  
  defines = [ "LEAN_SWITCH" ]
  
  include_dirs = [ "Switch" ]
  
  deps = [
    ":client"
  ]
}

