# ==================================================
# vars

config("tank_config") {
  include_dirs = [ ".", "Switch" ]
  defines = [ "LEAN_SWITCH" ]
}

static_library("client") {
  sources = [ "client.cpp" ]
  public_configs = [ ":tank_config" ]
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank") {
  sources = [ "service.cpp" ]
  include_dirs = [ "Switch" ]
  defines = [ "LEAN_SWITCH" ]
  deps = [
    "//gn-deps/snappy:snappy",
  ]
}

executable("tank-cli") {
  sources = [ "cli.cpp" ]
  deps = [
    ":client"
  ]
}

executable("consumer") {
  sources = [ "consumer.cpp" ]
  deps = [
    ":client"
  ]
}

